gleam/aion_flow/test/compile_fail/wrong_signal_payload_negative.gleam.fixture
import aion/codec
import aion/error
import aion/signal

pub type Approval {
  Approval(approved: Bool)
}

fn approval_codec() -> codec.Codec(Approval) {
  codec.Codec(encode: fn(_approval) { "{}" }, decode: fn(_payload) {
    Ok(Approval(approved: True))
  })
}

pub fn invalid_signal_payload() -> Result(String, error.ReceiveError) {
  // EXPECT_COMPILE_FAIL: The signal reference carries Approval payloads, but this
  // context requires receive to return String.
  let approval_signal = signal.new("approval", approval_codec())
  signal.receive(approval_signal)
}
